# python-docker

./: Dockerfile  README.md  docker-compose.no-mongo.yml  docker-compose.yml  pyproject.toml
api/: app.py
api/router/: about.py  index.py
app/: __init__.py  views.py
app/router/: add.py  index.py  upload.py
app/static/js/: upload.js
app/templates/: base.twig  fetch.twig  jquery.twig  upload-xhr.twig  upload.twig  xhr.twig
nginx/: python-demo.conf
otherapp/: app.py  views.py
otherapp/router/: about.py  index.py
python-api/: Dockerfile  README.md  pyproject.toml
python-api/app/router/: about.py
python-demo/: Dockerfile  README.md  pyproject.toml
python-demo/app/router/: article.py  index.py  upload.py
python-demo/app/templates/: upload.twig  xhr.twig
python-demo/otherapp/: app.py
python-demo/otherapp/router/: index.py
tests/: conftest.py  test_js_example.py
