[project]
name = "python_demo"
version = "1.1.0"
description = "Demonstrates making AJAX requests to Flask."
readme = "README.md"
license = {file = "LICENSE.md"}
maintainers = [{name = "LCY", email = "lincenying@gmail.com"}]
dependencies = [
    "flask",
    "gunicorn"
]

[project.urls]
Documentation = "https://flask.palletsprojects.com/patterns/javascript/"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "app"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["app", "otherapp", "tests"]

[tool.ruff]
src = ["src"]
